@@ -8,9 +8,7 @@ import java.io.InputStream;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
-import com.google.common.collect.ImmutableList;
 import com.google.common.io.ByteStreams;
 import com.kyc.snap.api.DocumentService;
 import com.kyc.snap.api.DocumentService.FindGridLinesRequest.FindGridLinesMode;
@@ -40,20 +38,17 @@ import com.kyc.snap.image.ImageUtils;
 import com.kyc.snap.store.Store;
 
 import javax.imageio.ImageIO;
-import lombok.Data;
 import okhttp3.OkHttpClient;
 import okhttp3.Request;
 import okhttp3.Response;
 
-@Data
-public class DocumentResource implements DocumentService {
+public record DocumentResource(
+        Store store,
+        GoogleAPIManager googleApi,
+        GridParser gridParser,
+        CrosswordParser crosswordParser) implements DocumentService {
 
     private static final int DOCUMENT_SIZE_LIMIT = 10_000_000;
-
-    private final Store store;
-    private final GoogleAPIManager googleApi;
-    private final GridParser gridParser;
-    private final CrosswordParser crosswordParser;
 
     @Override
     public Document getDocument(String documentId) {
@@ -84,14 +79,14 @@ public class DocumentResource implements DocumentService {
         BufferedImage image = ImageIO.read(ByteStreams.limit(imageStream, DOCUMENT_SIZE_LIMIT));
         String imageId = store.storeBlob(ImageUtils.toBytes(image));
         String compressedImageId = store.storeBlob(ImageUtils.toBytesCompressed(image));
-        Document doc = new Document(id, ImmutableList.of(new DocumentPage(imageId, compressedImageId, 1, ImmutableList.of())));
+        Document doc = new Document(id, List.of(new DocumentPage(imageId, compressedImageId, 1, List.of())));
         store.updateObject(id, doc);
         return doc;
     }
 
     @Override
     public Document createDocumentFromUrl(CreateDocumentFromUrlRequest request) throws Exception {
-        String url = request.getUrl();
+        String url = request.url();
         String urlExtension = url.substring(url.lastIndexOf('.') + 1).toLowerCase();
         try (Response response = new OkHttpClient().newCall(new Request.Builder().url(url).get().build()).execute()) {
             String contentType = response.header("Content-Type").toLowerCase();
@@ -104,7 +99,7 @@ public class DocumentResource implements DocumentService {
                 File tempPdf = File.createTempFile("snap", ".pdf");
                 try {
                     int exitCode = new ProcessBuilder("google-chrome", "--headless", "--disable-gpu", "--no-margins", "--no-sandbox",
-                        "--print-to-pdf=" + tempPdf.getAbsolutePath(), url).start().waitFor();
+                            "--print-to-pdf=" + tempPdf.getAbsolutePath(), url).start().waitFor();
                     if (exitCode != 0)
                         throw new IllegalStateException("Chrome printToPDF failed with exit code " + exitCode);
                     try (FileInputStream in = new FileInputStream(tempPdf)) {
@@ -119,7 +114,7 @@ public class DocumentResource implements DocumentService {
 
     @Override
     public GridLines findGridLines(String documentId, FindGridLinesRequest request) {
-        BufferedImage image = getSectionImage(documentId, request.getSection()).getImage();
+        BufferedImage image = getSectionImage(documentId, request.getSection()).image();
         GridLines gridLines;
         if (request.getFindGridLinesMode() == FindGridLinesMode.EXPLICIT)
             gridLines = gridParser.findGridLines(image);
@@ -134,10 +129,10 @@ public class DocumentResource implements DocumentService {
 
     @Override
     public List<ImageBlob> findBlobs(String documentId, FindBlobsRequest request) {
-        BufferedImage image = getSectionImage(documentId, request.getSection()).getImage();
+        BufferedImage image = getSectionImage(documentId, request.getSection()).image();
         return ImageUtils.findBlobs(image, request.isExact()).stream()
-            .filter(blob -> blob.getWidth() >= request.getMinBlobSize() && blob.getHeight() >= request.getMinBlobSize())
-            .collect(Collectors.toList());
+                .filter(blob -> blob.width() >= request.getMinBlobSize() && blob.height() >= request.getMinBlobSize())
+                .toList();
     }
 
     @Override
@@ -146,78 +141,72 @@ public class DocumentResource implements DocumentService {
         GridPosition gridPosition = gridParser.getGridPosition(gridLines);
         Grid grid = Grid.create(gridPosition.getNumRows(), gridPosition.getNumCols());
         SectionImage image = getSectionImage(documentId, request.getSection());
-        gridParser.findGridColors(image.getImage(), gridPosition, grid);
-        gridParser.findGridBorders(image.getImage(), gridPosition, grid);
+        gridParser.findGridColors(image.image(), gridPosition, grid);
+        gridParser.findGridBorders(image.image(), gridPosition, grid);
         gridParser.findGridBorderStyles(grid);
-        gridParser.findGridText(image.getTexts(), request.getSection().getRectangle(), gridPosition, grid);
+        gridParser.findGridText(image.texts(), request.getSection().rectangle(), gridPosition, grid);
         return new FindGridResponse(gridPosition, grid);
     }
 
     @Override
     public FindCrosswordCluesResponse findCrosswordClues(String documentId, FindCrosswordCluesRequest request) {
-        CrosswordClues clues = crosswordParser.parseClues(getDocument(documentId), request.getCrossword());
-        List<CrosswordFormula> formulas = crosswordParser.getFormulas(request.getCrossword(), clues);
+        CrosswordClues clues = crosswordParser.parseClues(getDocument(documentId), request.crossword());
+        List<CrosswordFormula> formulas = crosswordParser.getFormulas(request.crossword(), clues);
         return new FindCrosswordCluesResponse(clues, formulas);
     }
 
     @Override
     public boolean exportSheet(String documentId, String spreadsheetId, int sheetId, ExportSheetRequest request) {
-        SectionImage image = getSectionImage(documentId, request.getSection());
+        SectionImage image = getSectionImage(documentId, request.section());
         SpreadsheetManager spreadsheets = googleApi.getSheet(spreadsheetId, sheetId);
         SheetData sheetData = spreadsheets.getSheetData();
-        Marker marker = request.getMarker();
-        GridPosition gridPosition = request.getGridLines() == null ? null : gridParser.getGridPosition(request.getGridLines());
-        if (gridPosition != null && request.getGrid() != null) {
-            new GridSpreadsheetWrapper(spreadsheets, marker.getRow(), marker.getCol())
-                .toSpreadsheet(gridPosition, request.getGrid(), sheetData);
-            if (request.getCrossword() != null && request.getCrosswordClues() != null) {
-                new CrosswordSpreadsheetWrapper(spreadsheets, marker.getRow(), marker.getCol())
-                    .toSpreadsheet(request.getGrid(), request.getCrossword(), request.getCrosswordClues());
+        Marker marker = request.marker();
+        GridPosition gridPosition = request.gridLines() == null ? null : gridParser.getGridPosition(request.gridLines());
+        if (gridPosition != null && request.grid() != null) {
+            new GridSpreadsheetWrapper(spreadsheets, marker.row(), marker.col())
+                    .toSpreadsheet(gridPosition, request.grid(), sheetData);
+            if (request.crossword() != null && request.crosswordClues() != null) {
+                new CrosswordSpreadsheetWrapper(spreadsheets, marker.row(), marker.col())
+                        .toSpreadsheet(request.grid(), request.crossword(), request.crosswordClues());
             }
-        } else if (request.getBlobs() != null) {
-            spreadsheets.createNewSheetWithImages(marker.getRow(), marker.getCol(), request.getBlobs().stream()
-                .map(blob -> {
-                    BufferedImage blobImage = ImageUtils.getBlobImage(image.getImage(), blob);
-                    BufferedImage scaledImage = ImageUtils.scale(blobImage, 1. / image.getScale());
-                    int offsetX = (int) (blob.getX() / image.getScale());
-                    int offsetY = (int) (blob.getY() / image.getScale());
-                    return new OverlayImage(scaledImage, offsetX, offsetY);
-                })
-                .collect(Collectors.toList()));
+        } else if (request.blobs() != null) {
+            spreadsheets.createNewSheetWithImages(marker.row(), marker.col(), request.blobs().stream()
+                    .map(blob -> {
+                        BufferedImage blobImage = ImageUtils.getBlobImage(image.image(), blob);
+                        BufferedImage scaledImage = ImageUtils.scale(blobImage, 1. / image.scale());
+                        int offsetX = (int) (blob.x() / image.scale());
+                        int offsetY = (int) (blob.y() / image.scale());
+                        return new OverlayImage(scaledImage, offsetX, offsetY);
+                    })
+                    .toList());
         }
         return true;
     }
 
     @Override
     public boolean exportSlide(String documentId, String presentationId, String slideId, ExportSlideRequest request) {
-        SectionImage image = getSectionImage(documentId, request.getSection());
+        SectionImage image = getSectionImage(documentId, request.section());
         PresentationManager presentations = googleApi.getPresentation(presentationId, slideId);
-        if (request.getBlobs() != null) {
+        if (request.blobs() != null) {
             presentations.addImages(
-                request.getBlobs().stream()
-                    .map(blob -> new PositionedImage(ImageUtils.getBlobImage(image.image, blob), blob.getX(), blob.getY()))
-                    .collect(Collectors.toList()),
-                image.image.getWidth(),
-                image.image.getHeight());
+                    request.blobs().stream()
+                            .map(blob -> new PositionedImage(ImageUtils.getBlobImage(image.image, blob), blob.x(), blob.y()))
+                            .toList(),
+                    image.image.getWidth(),
+                    image.image.getHeight());
         }
         return true;
     }
 
     private SectionImage getSectionImage(String documentId, Section section) {
         Document doc = getDocument(documentId);
-        DocumentPage page = doc.getPages().get(section.getPage());
-        byte[] imageBlob = store.getBlob(page.getImageId());
-        Rectangle r = section.getRectangle();
+        DocumentPage page = doc.pages().get(section.page());
+        byte[] imageBlob = store.getBlob(page.imageId());
+        Rectangle r = section.rectangle();
         BufferedImage image = ImageUtils.fromBytes(imageBlob)
-            .getSubimage((int) r.getX(), (int) r.getY(), (int) r.getWidth(), (int) r.getHeight());
-        return new SectionImage(image, page.getScale(), page.getTexts());
+                .getSubimage((int) r.x(), (int) r.y(), (int) r.width(), (int) r.height());
+        return new SectionImage(image, page.scale(), page.texts());
     }
 
-    @Data
-    private static class SectionImage {
-
-        private final BufferedImage image;
-        private final double scale;
-        private final List<DocumentText> texts;
-    }
+    private record SectionImage(BufferedImage image, double scale, List<DocumentText> texts) {}
 }
