@@ -5,16 +5,15 @@ import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
 
-import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Sets;
 
 import feign.Feign;
 import feign.QueryMap;
 import feign.RequestLine;
 import feign.jackson.JacksonDecoder;
-import lombok.Data;
 
-public class DatamuseUtil {
+public enum DatamuseUtil {
+    ;
 
     public static List<WordResult> getCommonWordsAfter(String word) {
         return getCommonWordsAfter(word, "");
@@ -24,7 +23,7 @@ public class DatamuseUtil {
         DatamuseService datamuse = Feign.builder()
             .decoder(new JacksonDecoder())
             .target(DatamuseService.class, "https://api.datamuse.com");
-        return datamuse.getWords(ImmutableMap.of("sp", pattern, "lc", word));
+        return datamuse.getWords(Map.of("sp", pattern, "lc", word));
     }
 
     public static List<WordResult> getCommonWordsBefore(String word) {
@@ -35,21 +34,16 @@ public class DatamuseUtil {
         DatamuseService datamuse = Feign.builder()
             .decoder(new JacksonDecoder())
             .target(DatamuseService.class, "https://api.datamuse.com");
-        return datamuse.getWords(ImmutableMap.of("sp", pattern, "rc", word));
+        return datamuse.getWords(Map.of("sp", pattern, "rc", word));
     }
 
     public static Set<String> getCommonWordsBetween(String before, String after) {
         return Sets.intersection(
-            getCommonWordsAfter(before).stream().map(WordResult::getWord).collect(Collectors.toSet()),
-            getCommonWordsBefore(after).stream().map(WordResult::getWord).collect(Collectors.toSet()));
+            getCommonWordsAfter(before).stream().map(WordResult::word).collect(Collectors.toSet()),
+            getCommonWordsBefore(after).stream().map(WordResult::word).collect(Collectors.toSet()));
     }
 
-    @Data
-    public static class WordResult {
-
-        private final String word;
-        private final int score;
-    }
+    public record WordResult(String word, int score) {}
 
     interface DatamuseService {
 
