@@ -3,10 +3,9 @@ package com.kyc.snap.util;
 import static org.assertj.core.api.Assertions.assertThat;
 
 import java.math.BigInteger;
+import java.util.List;
 
 import org.junit.Test;
-
-import com.google.common.collect.ImmutableList;
 
 public class MathUtilTest {
 
@@ -21,9 +20,9 @@ public class MathUtilTest {
 
     @Test
     public void testNumRearrangements() {
-        assertThat(MathUtil.numRearrangements(ImmutableList.of())).isEqualTo(1);
-        assertThat(MathUtil.numRearrangements(ImmutableList.of(1))).isEqualTo(1);
-        assertThat(MathUtil.numRearrangements(ImmutableList.of(1, 2, 3))).isEqualTo(6);
-        assertThat(MathUtil.numRearrangements(ImmutableList.of(1, 2, 1, 2, 3))).isEqualTo(30);
+        assertThat(MathUtil.numRearrangements(List.of())).isEqualTo(1);
+        assertThat(MathUtil.numRearrangements(List.of(1))).isEqualTo(1);
+        assertThat(MathUtil.numRearrangements(List.of(1, 2, 3))).isEqualTo(6);
+        assertThat(MathUtil.numRearrangements(List.of(1, 2, 1, 2, 3))).isEqualTo(30);
     }
 }
